--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,10 @@
 <resources>
     <string name="app_name">LandmarkRemark</string>
     <string name="title_activity_landmarks">Landmarks</string>
+    <string name="create">Add</string>
+    <string name="cancel">Cancel</string>
+    <string name="action_search">Search landmarks</string>
+    <string name="settings">Settings</string>
+    <string name="search_hint">Search landmarks</string>
+    <string name="no_search_results">No results found</string>
 </resources>
