--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,10 @@
     <string name="action_search">Search landmarks</string>
     <string name="settings">Settings</string>
     <string name="search_hint">Search landmarks</string>
-    <string name="no_search_results">No results found</string>
+    <string name="no_search_results">No results found for query: %1$s</string>
+    <string name="username_label">Username:</string>
+    <string name="no_landmark_location">Unable to find your location</string>
+    <string name="create_new_landmark_instruct">Click the blue location dot to save a remark</string>
+    <string name="change_username">Change username:</string>
+    <string name="ok">Ok</string>
 </resources>
