--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="create">Add</string>
     <string name="cancel">Cancel</string>
     <string name="action_search">Search landmarks</string>
-    <string name="settings">Settings</string>
+    <string name="settings">Change username</string>
     <string name="search_hint">Search landmarks</string>
     <string name="no_search_results">No results found for query: %1$s</string>
     <string name="username_label">Username:</string>
